<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"
        android:iconTint="@color/primary_color"
        android:title="@string/home_fragment" />

    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/cart"
        android:iconTint="@color/primary_color"
        android:title="@string/cart" />

    <item
        android:id="@+id/wishlistFragment"
        android:icon="@drawable/wishlist"
        android:iconTint="@color/primary_color"
        android:title="Wishlist" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/transaksi"
        android:iconTint="@color/primary_color"
        android:title="Transaksi" />


    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile"
        android:iconTint="@color/primary_color"
        android:title="@string/profile_fragment" />

</menu>