<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.checkout.PaymentActivity">

    <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/AppTheme.TextTittle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/detail_pembayaran"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/view0"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/lines" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/urbanist_bold"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/batas_pembayaran"/>

    <TextView
        android:id="@+id/dateExpiredOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/urbanist_regular"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/date_expired"/>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="20dp"
        android:background="@color/lines" />

    <TextView
        android:id="@+id/namePaymentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/urbanist_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/bca_virtual_account"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/lines" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/urbanist_regular"
        android:textColor="#88666666"
        android:textSize="12sp"
        android:text="@string/nomor_virtual_account"/>

    <LinearLayout
        android:id="@+id/linear_Va"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/va_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:fontFamily="@font/urbanist_medium"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/va_number"/>

        <TextView
            android:id="@+id/tv_tapToCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:fontFamily="@font/urbanist_medium"
            android:textColor="@color/priority"
            android:textSize="14sp"
            android:text="@string/salin"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45sp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/urbanist_regular"
        android:textColor="#88666666"
        android:textSize="12sp"
        android:text="@string/total_pembayaran"/>

    <TextView
        android:id="@+id/totalPaymentOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:fontFamily="@font/urbanist_medium"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/total_payment_order"/>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/lines" />

    <TextView
        android:id="@+id/tv_info_cek_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="45sp"
        android:layout_marginEnd="45sp"
        android:gravity="center"
        android:text="@string/info_cek_status"
        android:fontFamily="@font/urbanist_regular"
        android:textColor="#88666666"
        android:textSize="12sp"/>

    <Button
        android:id="@+id/btn_selesai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45sp"
        android:layout_marginEnd="45sp"
        android:text="@string/selesai"
        android:backgroundTint="@color/priority"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btn_cancelOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45sp"
        android:layout_marginEnd="45sp"
        android:text="@string/cancel"
        android:backgroundTint="@color/second_color"
        android:textColor="@color/white"
        android:textStyle="bold"/>
</LinearLayout>