<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.login.LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:textSize="20sp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/shadow"
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/masuk_ke_akun_anda"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/email_auth"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etemail_login"
            android:importantForAutofill="no"
            android:inputType="none|textNoSuggestions"
            android:fontFamily="@font/urbanist_regular"
            android:backgroundTint="@color/bgsearch"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/password_auth"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:fontFamily="@font/urbanist_regular"
            android:backgroundTint="@color/bgsearch"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lupa_kata_sandi"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/urbanist_regular"
        android:textColor="@color/black"
        android:textAlignment="textEnd"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/priority"
        android:fontFamily="@font/urbanist_regular"
        android:padding="15dp"
        android:text="@string/masuk"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:cornerRadius="10dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun"
            android:fontFamily="@font/urbanist_regular"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:layout_margin="5dp"
            android:fontFamily="@font/urbanist_regular"
            android:textColor="@color/priority"
            android:textAlignment="center"/>

    </LinearLayout>


</LinearLayout>

